# coupon_rs

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
admin/api/src/: lib.rs
admin/api/src/controller/: template.rs
admin/api/src/middleware/: error_handler.rs
admin/common/: Cargo.toml
admin/common/src/: app_error.rs  config.rs  datetime.rs  error_code.rs  lib.rs
admin/data/: Cargo.toml
admin/data/src/: enums.rs  lib.rs
admin/data/src/dao/: template.rs
admin/data/src/entity/: template.rs
admin/services/: Cargo.toml
admin/services/src/: lib.rs  template.rs
admin/services/src/auth/: mod.rs
admin/services/src/dto/: mod.rs  template_req.rs
config/: application.yaml  log4rs.yaml
core/api/: Cargo.toml
core/api/src/: lib.rs
core/api/src/controller/: template.rs
core/api/src/middleware/: error_handler.rs
core/common/: Cargo.toml
core/common/src/: app_error.rs  config.rs  enums.rs  lib.rs  transfer.rs
core/data/: Cargo.toml
core/data/src/dto/: template_req.rs
core/data/src/entity/: template.rs
core/services/: Cargo.toml
core/services/src/: lib.rs  template.rs
docker/: docker-compose-dev.yaml
docker/mysql/conf/: my.cnf
docker/mysql/init-scripts/: 1.coupon_mysql.sql
src/: config.rs  main.rs
src/auth/: mod.rs
src/common/: enums.rs
src/controller/: mod.rs  template_controller.rs
src/error/: app_error.rs  global_errors_handler.rs  mod.rs
src/services/: template_service.rs
src/storage/: mod.rs
src/storage/dao/: mod.rs  template_dao.rs
src/storage/entity/: mod.rs  template_entity.rs
src/transfer/: mod.rs
src/transfer/request/: template_req.rs
