[package]
name = "coupon_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log4rs = {version = "1.3.0", features = ["gzip"]}
log = "0.4.27"
actix-web = "4.10.2"
actix-rt = "2.10.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.82"
serde_repr = "0.1.20"
sqlx = {version = "0.8.5", features = ["mysql", "runtime-tokio", "chrono"]}
config = { version = "0.15.11", features = ["yaml"] }

[dev-dependencies]
mockall = "0.13.1"