[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.82"
actix-web = "4.10.2"
log = "0.4.27"
config = { version = "0.15.11", features = ["yaml"] }
log4rs = { version = "1.3.0", features = ["gzip"] }
sea-orm = { version = "^0.12.15" }
