[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

sea-orm = { version = "^0.12.15", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.14"
serde_repr = "0.1.20"
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
