[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data" }
common = { path = "../common" }

sea-orm = { version = "^0.12.15", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
actix-web = "4.10.2"
log = "0.4.27"
once_cell = "1.21.3"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.14"
