[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data"}
common = { path = "../common"}

sea-orm = { version = "^0.12.15", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ]}

log4rs = { version = "1.3.0", features = ["gzip"] }
log = "0.4.27"